--- a/themes/catppuccin_frappe.toml
+++ b/themes/catppuccin_frappe.toml
@@ -1,6 +1,6 @@
 # Default colors
 [colors.primary]
-background = '#1e1e2e' # base
+background = '#303446' # base
 foreground = '#C6D0F5' # text
 # Bright and dim foreground colors
 dim_foreground = '#C6D0F5' # text
@@ -9,7 +9,7 @@ bright_foreground = '#C6D0F5' # text
 # Cursor colors
 [colors.cursor]
 text = '#303446' # base
-cursor = '#abb2bf' # rosewater
+cursor = '#F2D5CF' # rosewater
 
 [colors.vi_mode_cursor]
 text = '#303446' # base
