--- a/alacritty.toml
+++ b/alacritty.toml
@@ -102,7 +102,7 @@ white   = '#CCCCCC'   # white
 black   = '#767676'  # black
 red     = '#E74856'  # red
 green   = '#16C60C'  # green
-yellow  = '#F9F1A5'  # yellow
+yellow  = '#e6cf00'  # yellow
 blue    = '#3B78FF'  # blue
 magenta = '#B4009E'  # purple
 cyan    = '#61D6D6'  # cyan
