two config file of catppuccin (latte, frappe)

--- a/alacritty-Frappe.toml
+++ b/alacritty-Frappe.toml
@@ -18,14 +18,14 @@ import = [
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/kanagawa_dragon.toml",
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/zenburn.toml",
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/catppuccin_mocha.toml",
-  # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/catppuccin_frappe.toml",
+  "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/catppuccin_frappe.toml",
 
   # light
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/github_light.toml",
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/rose-pine-dawn.toml",
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/papercolor_light.toml",
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/ayu_light.toml",
-  "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/catppuccin_latte.toml",
+  # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/catppuccin_latte.toml",
 ]
 
 live_config_reload = true
@@ -82,10 +82,12 @@ duration  = 0
 [colors]
 draw_bold_text_with_bright_colors = true
 transparent_background_colors     = true
-cursor  = { cursor = '#6c6f85' } # 光标颜色 (Latte)
+cursor  = { cursor = '#abb2bf' } # 光标颜色 (Frappe)
+vi_mode_cursor = { text = "#1e1e2e", cursor = "#b96167"}  # (Frappe)
 
 [colors.primary]
-background = '#eeeeee' # 背景颜色 (Latte)
+background = '#1e1e2e' # 背景颜色 (Frappe)
+foreground = '#abb2bf' # 字体颜色  (Frappe)
 
 [colors.normal]
 black   = '#0C0C0C'   # black
