--- a/alacritty-Latte.toml
+++ b/alacritty-Latte.toml
@@ -100,7 +100,7 @@ white   = '#CCCCCC'   # white
 black   = '#767676'  # black
 red     = '#E74856'  # red
 green   = '#16C60C'  # green
-yellow  = '#e6cf00'  # yellow
+yellow  = '#ff7a00'  # yellow
 blue    = '#3B78FF'  # blue
 magenta = '#B4009E'  # purple
 cyan    = '#61D6D6'  # cyan
