--- a/alacritty-Latte.toml
+++ b/alacritty-Latte.toml
@@ -1,5 +1,5 @@
 # theme
-import = [
+general.import = [
   # dark
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/gruvbox_material_medium_dark.toml",
   # "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/catppuccin_macchiato.toml",
@@ -28,23 +28,24 @@ import = [
   "C:/Users/ThinkPad/AppData/Roaming/alacritty/themes/catppuccin_latte.toml",
 ]
 
-live_config_reload = true
-working_directory  = "C:/Users/ThinkPad/Desktop/"
+general.live_config_reload = true
+general.working_directory  = "C:/Users/ThinkPad/Desktop/"
 
 [env]
 TERM = "alacritty"
 COLORTERM = "truecolor"
 
-[shell]
+[terminal.shell]
 program = 'C:\Program Files\PowerShell\7\pwsh.exe'
 
 [window]
 opacity         = 1.00
 startup_mode    = "Windowed" # Windowed Fullscreen Maximized
-decorations     = "Full" # Full None
+decorations     = "Transparent" # Full None Transparent Buttonless
 dynamic_padding = false
 dynamic_title   = true
 padding         = { x = 2, y = 2 }
+blur            = true
 
 # center_window when font size is 16.0
 # position        = { x = 132, y = 50 }
